Bug: home-sections are broken on a large screen;

--- a/src/pages/home/homepage-section/homepage-section.pcss
+++ b/src/pages/home/homepage-section/homepage-section.pcss
@@ -6,6 +6,7 @@
 
 .HomepageSection {
   width: 100%;
+  max-width: 128em;
   height: auto;
   max-height: 48em;
   margin-top: 4em;
